# legallens

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  project-presentation.html  pyproject.toml
.github/workflows/: ci.yml
backend/: celery_app.py  config.py  main.py
backend/api/: dependencies.py
backend/api/routes/: contracts.py  health.py  tasks.py
backend/api/schemas/: clauses.py  contracts.py  tasks.py
backend/core/: llm.py  orchestrator.py
backend/core/agents/: clause_extractor.py  precedent_retriever.py  recommendation_generator.py  risk_classifier.py
backend/core/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py
backend/core/prompts/: clause_extraction.py  recommendation.py  risk_classification.py
backend/knowledge/: embeddings.py  indexer.py  retriever.py  vector_store.py
backend/services/: analysis_service.py  report_service.py
backend/tasks/: analysis_tasks.py
docs/: api.md  architecture.md  evaluation.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/analysis/[taskId]/: page.tsx
frontend/components/analysis/: ClauseCard.tsx  ClauseDialog.tsx  Dashboard.tsx  SummaryCard.tsx
frontend/components/upload/: UploadZone.tsx
frontend/lib/: api.ts  types.ts  utils.ts
scripts/: index_corpus.py  run_eval.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_config.py  test_health.py  test_llm_factory.py  test_orchestrator.py  test_parsers.py  test_rag.py
