[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legallens"
version = "0.1.0"
description = "AI-Powered Contract Risk Analyzer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "langgraph>=0.1.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
    "reportlab>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]
